tests/error/functions-6.moc
void max(int a, int b) {
    if(a < b) {
        return b;
    }
    else {
        return a;
    }
}

void main() {
    max(1, 'a');
}
